--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>SoNearSonar</title>
+	<link rel="stylesheet" media="screen" href="css/styles.css">
+</head>
+<body>
+<!-- particles container -->
+<div id="particles-js"></div>
+
+<!-- scripts -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script src="js/app.js"></script>
+
+<!-- content -->
+<ul>
+	<li><img src="images/Picture.png" width="53px" height="53px"></li>
+	<li><a href="/">Home</a></li>
+	<li><a href="/">About</a></li>
+	<li><a href="/">Positions</a></li>
+	<li><a href="/">Projects</a></li>
+</ul>
+<h1>Still a work-in progress. Come back soon!</h1>
+</body>
+</html>
