--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>SoNearSonar</title>
 	<link rel="stylesheet" media="screen" href="css/styles.css">
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- particles container -->
