Change site theme and optimize particles (see desc.)
Reduced the number of particles from 80 to 40 and made the distance to connect them from 200 to 100

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<li><a href="/">Positions</a></li>
 	<li><a href="/">Projects</a></li>
 </ul>
-<h1>Still a work-in progress. Come back soon!</h1>
+<div id="home">
+	<h1>Still a work-in progress. Come back soon!</h1>
+</div>
 </body>
 </html>
