Update index page slightly

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 	<li><a href="/">Projects</a></li>
 </ul>
 -->
-<h1>Still a work-in progress. Come back soon!</h1>
+<h1>A work-in progress. Come back soon!</h1>
 </body>
 </html>
